# AnotherTTS

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  ttsengine.cpp  ttsengine.h  voicesettingsdialog.cpp  voicesettingsdialog.h
.github/workflows/: build.yml
